mail-dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: mail-dev
  name: mail-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mail-dev
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: mail-dev
    spec:
      containers:
        - image: maildev/maildev
          name: azienda-maildev
          ports:
            - containerPort: 1080
              protocol: TCP
            - containerPort: 1025
              protocol: TCP
      restartPolicy: Always
