mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-express
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: mongo-express
    spec:
      containers:
        - env:
            - name: ME_CONFIG_BASICAUTH_PASSWORD
              value: mypassword
            - name: ME_CONFIG_BASICAUTH_USERNAME
              value: azienda
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
              value: mypassword
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME
              value: azienda
            - name: ME_CONFIG_MONGODB_SERVER
              value: mongodb
          image: mongo-express:latest
          name: azienda-mongo-express
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
