mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: mongodb
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: mypassword
            - name: MONGO_INITDB_ROOT_USERNAME
              value: azienda
          image: mongo:latest
          name: mongo-azienda
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongo
            - mountPath: /data/configdb
              name: mongo-config
      restartPolicy: Always
      volumes:
        - name: mongo
          persistentVolumeClaim:
            claimName: mongo
        - name: mongo-config
          persistentVolumeClaim:
            claimName: mongo-config
