kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: kafka-controller
      port: 9093
      targetPort: 9093
  selector:
    io.kompose.service: kafka
