newtork-zoo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-zookeeper-to-kafka
spec:
  podSelector:
    matchLabels:
      app: zookeeper
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kafka
  policyTypes:
    - Ingress
